--- a/portfolio/scss/_portfolio.scss
+++ b/portfolio/scss/_portfolio.scss
@@ -23,6 +23,8 @@
   }
 
   &__img {
-    max-width: 450px;
+    width: 450px;
+    max-width: 100%;
+    height: auto;
   }
 }
